Project/phase1/test/test_12012937_5.spl
int poor(){
	(mercy = mercy) || (on)*me;
	set&&fire = 2!=history+0;
}
char I(){
	int m = 'breaking my own rules';
	I = ' '+m == crying + as + a +fool;
	Tall * stories >= (on[the] - page);
	-Short.glories_on 5the faint;
	{I / m && close - enough='\n'=to >=touch;}
	{
		int but - I = never || cared + for +love;
		{
			It - 's' < a > church && of - burnt * romances;
			and = I = 'm' /(-2 -4 -got||to -pray(
			
				it [s] = a, solo(song), and + it[s] || only (for, the=brave));{
			}
		}
	}
}
